--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-WTF==1.0.1
 folium==0.13.0
 geographiclib==2.0
 geopy==2.3.0
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==5.0.0
 itsdangerous==2.0.1
